// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar > should render nested collection with filterTerm 1`] = `
<DocumentFragment>
  <aside
    class="css-mpd3gk"
  >
    <h2
      class="css-kyaebm"
    >
      collection.sidebar.collections
    </h2>
    <collection-search
      collections="[object Object]"
      searchterm=""
    />
    <ul
      class="css-nxqw53"
    >
      <li>
        <nested-collection
          collection="[object Object]"
          data-testid="posts"
          filterterm="dir1/dir2"
        />
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Sidebar > should render sidebar with a nested collection 1`] = `
<DocumentFragment>
  <aside
    class="css-mpd3gk"
  >
    <h2
      class="css-kyaebm"
    >
      collection.sidebar.collections
    </h2>
    <collection-search
      collections="[object Object]"
      searchterm=""
    />
    <ul
      class="css-nxqw53"
    >
      <li>
        <nested-collection
          collection="[object Object]"
          data-testid="posts"
        />
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Sidebar > should render sidebar with a simple collection 1`] = `
<DocumentFragment>
  <aside
    class="css-mpd3gk"
  >
    <h2
      class="css-kyaebm"
    >
      collection.sidebar.collections
    </h2>
    <collection-search
      collections="[object Object]"
      searchterm=""
    />
    <ul
      class="css-nxqw53"
    >
      <li>
        <a
          class="({ isActive }) => isActive ? "active" : "" css-1nhl3vj"
          data-discover="true"
          data-testid="posts"
          href="/collections/posts"
        >
          <mocked-icon
            type="write"
          />
          Posts
        </a>
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Sidebar > should render sidebar without search 1`] = `
<DocumentFragment>
  <aside
    class="css-mpd3gk"
  >
    <h2
      class="css-kyaebm"
    >
      collection.sidebar.collections
    </h2>
    <ul
      class="css-nxqw53"
    >
      <li>
        <a
          class="({ isActive }) => isActive ? "active" : "" css-1nhl3vj"
          data-discover="true"
          data-testid="posts"
          href="/collections/posts"
        >
          <mocked-icon
            type="write"
          />
          Posts
        </a>
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;
